@@ -6,9 +6,11 @@ import com.louay.model.util.queue.MyList;
 import com.louay.model.util.queue.MyQueue;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.*;
-import org.springframework.jdbc.datasource.DriverManagerDataSource;
+import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
+import org.springframework.jdbc.support.GeneratedKeyHolder;
+import org.springframework.jdbc.support.KeyHolder;
 
-import javax.sql.DataSource;
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -36,10 +38,12 @@ public class BeansFactory {
 
         Connection connection = null;
         try{
-            Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
+            Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
             connection = DriverManager.getConnection(db.getUrl(), db.getUsername(), db.getPassword());
-        } catch (ClassNotFoundException | SQLException | IllegalAccessException | InstantiationException e) {
+        } catch (ClassNotFoundException | SQLException | NoSuchMethodException e) {
             System.out.println(e.getMessage());
+        } catch (IllegalAccessException | InstantiationException | InvocationTargetException e) {
+            e.printStackTrace();
         }
 
         return new ConnectionWrapper(connection);
@@ -54,14 +58,16 @@ public class BeansFactory {
         return context;
     }
 
-    @Bean
-    public DataSource mysqlDataSource(){
-        DriverManagerDataSource dataSource = new DriverManagerDataSource();
-        dataSource.setDriverClassName("com.mysql.cj.jdbc.Driver");
-        dataSource.setUrl("jdbc:mysql://localhost:3306/course_management_system?useSSL=false");
-        dataSource.setUsername("root");
-        dataSource.setPassword("1729384#General");
-
-        return dataSource;
+    @Bean(name = "buildMapParameter")
+    @Scope("prototype")
+    public MapSqlParameterSource buildMapSqlParameter(){
+        return new MapSqlParameterSource();
     }
+
+    @Bean(name = "buildKeyHolder")
+    @Scope("prototype")
+    public KeyHolder buildGeneratedKeyHolder(){
+        return new GeneratedKeyHolder();
+    }
+
 }
